2008-09-04  Michael Snyder  <msnyder@vmware.com>

	* infrun.c (handle_inferior_event): Revert one change, in the
	context of comment "We are at the start of a different line".
	This code finds the start of the line while stepping.

2008-09-01  Hui Zhu  <teawater@gmail.com>

	Record target will not record the memory change of
	instruction if it use segment registers.

	* i386-tdep.c (i386_record_lea_modrm): Make debug message
	more clear. (i386_record): Record target will not record the
	memory change of instruction if it use segment registers.

	Make record target not work with inferior in non-stop mode
	(non-stop).

	* record.c (record_open): If non_stop is true (in non-stop
	mode), output error.

	Make record target not work with GNU/Linux inferior in
	asynchronous mode (linux-async).

	* record.c (record_linux_async_permitted): New variable.
	Record the value of linux_async_permitted.
	(record_open): If record_linux_async_permitted is true (in
	asynchronous mode), output error.
	* linux-nat.c (set_maintenance_linux_async_permitted): Set
	value of linux_async_permitted to
	record_linux_async_permitted.

	* linux-record.c (record_linux_system_call): Correct error of
	sys_restart_syscall.

2008-08-23  Hui Zhu  <teawater@gmail.com>

	Fix record target doesn't reset variables bug.

	* record.c (record_open): Reset variables.
	(record_close): Remove some code that not need.

	Fix record target doesn't support mourn inferior bug.

	* record.c (record_mourn_inferior): New function. record
	target mourn inferior.
	(init_record_ops): Set "record_ops.to_mourn_inferior" point
	to "record_mourn_inferior".

	Set terminal in function "record_check_insn_num".

	* record.c (record_check_insn_num): If "set_terminal" is 1,
	set terminal.
	(record_message): Set argument 1 to function
	"record_check_insn_num".
	(record_registers_change): Set argument 0 to function
	"record_check_insn_num".
	(record_xfer_partial): Set argument 0 to function
	"record_check_insn_num".
	
